@@ -1,85 +1,0 @@
-@comment $NetBSD$
-${PYSITELIB}/distutils/__init__.py
-${PYSITELIB}/distutils/__init__.pyc
-${PYSITELIB}/distutils/archive_util.py
-${PYSITELIB}/distutils/archive_util.pyc
-${PYSITELIB}/distutils/bcppcompiler.py
-${PYSITELIB}/distutils/bcppcompiler.pyc
-${PYSITELIB}/distutils/ccompiler.py
-${PYSITELIB}/distutils/ccompiler.pyc
-${PYSITELIB}/distutils/cmd.py
-${PYSITELIB}/distutils/cmd.pyc
-${PYSITELIB}/distutils/command/__init__.py
-${PYSITELIB}/distutils/command/__init__.pyc
-${PYSITELIB}/distutils/command/bdist.py
-${PYSITELIB}/distutils/command/bdist.pyc
-${PYSITELIB}/distutils/command/bdist_dumb.py
-${PYSITELIB}/distutils/command/bdist_dumb.pyc
-${PYSITELIB}/distutils/command/bdist_rpm.py
-${PYSITELIB}/distutils/command/bdist_rpm.pyc
-${PYSITELIB}/distutils/command/bdist_wininst.py
-${PYSITELIB}/distutils/command/bdist_wininst.pyc
-${PYSITELIB}/distutils/command/build.py
-${PYSITELIB}/distutils/command/build.pyc
-${PYSITELIB}/distutils/command/build_clib.py
-${PYSITELIB}/distutils/command/build_clib.pyc
-${PYSITELIB}/distutils/command/build_ext.py
-${PYSITELIB}/distutils/command/build_ext.pyc
-${PYSITELIB}/distutils/command/build_py.py
-${PYSITELIB}/distutils/command/build_py.pyc
-${PYSITELIB}/distutils/command/build_scripts.py
-${PYSITELIB}/distutils/command/build_scripts.pyc
-${PYSITELIB}/distutils/command/clean.py
-${PYSITELIB}/distutils/command/clean.pyc
-${PYSITELIB}/distutils/command/config.py
-${PYSITELIB}/distutils/command/config.pyc
-${PYSITELIB}/distutils/command/install.py
-${PYSITELIB}/distutils/command/install.pyc
-${PYSITELIB}/distutils/command/install_data.py
-${PYSITELIB}/distutils/command/install_data.pyc
-${PYSITELIB}/distutils/command/install_headers.py
-${PYSITELIB}/distutils/command/install_headers.pyc
-${PYSITELIB}/distutils/command/install_lib.py
-${PYSITELIB}/distutils/command/install_lib.pyc
-${PYSITELIB}/distutils/command/install_scripts.py
-${PYSITELIB}/distutils/command/install_scripts.pyc
-${PYSITELIB}/distutils/command/sdist.py
-${PYSITELIB}/distutils/command/sdist.pyc
-${PYSITELIB}/distutils/core.py
-${PYSITELIB}/distutils/core.pyc
-${PYSITELIB}/distutils/cygwinccompiler.py
-${PYSITELIB}/distutils/cygwinccompiler.pyc
-${PYSITELIB}/distutils/dep_util.py
-${PYSITELIB}/distutils/dep_util.pyc
-${PYSITELIB}/distutils/dir_util.py
-${PYSITELIB}/distutils/dir_util.pyc
-${PYSITELIB}/distutils/dist.py
-${PYSITELIB}/distutils/dist.pyc
-${PYSITELIB}/distutils/errors.py
-${PYSITELIB}/distutils/errors.pyc
-${PYSITELIB}/distutils/extension.py
-${PYSITELIB}/distutils/extension.pyc
-${PYSITELIB}/distutils/fancy_getopt.py
-${PYSITELIB}/distutils/fancy_getopt.pyc
-${PYSITELIB}/distutils/file_util.py
-${PYSITELIB}/distutils/file_util.pyc
-${PYSITELIB}/distutils/filelist.py
-${PYSITELIB}/distutils/filelist.pyc
-${PYSITELIB}/distutils/msvccompiler.py
-${PYSITELIB}/distutils/msvccompiler.pyc
-${PYSITELIB}/distutils/mwerkscompiler.py
-${PYSITELIB}/distutils/mwerkscompiler.pyc
-${PYSITELIB}/distutils/spawn.py
-${PYSITELIB}/distutils/spawn.pyc
-${PYSITELIB}/distutils/sysconfig.py
-${PYSITELIB}/distutils/sysconfig.pyc
-${PYSITELIB}/distutils/text_file.py
-${PYSITELIB}/distutils/text_file.pyc
-${PYSITELIB}/distutils/unixccompiler.py
-${PYSITELIB}/distutils/unixccompiler.pyc
-${PYSITELIB}/distutils/util.py
-${PYSITELIB}/distutils/util.pyc
-${PYSITELIB}/distutils/version.py
-${PYSITELIB}/distutils/version.pyc
-@dirrm ${PYSITELIB}/distutils/command
-@dirrm ${PYSITELIB}/distutils
